@@ -1,2 +1,2 @@
-EXTRA_DIST=apidoc.h STYLE db2.png
+EXTRA_DIST=apidoc.h STYLE db2.png testdialog.xml
 
