@@ -73,9 +73,6 @@ int GWEN_MessageBox(GWEN_WIDGET *parent,
   scrollerFlags=GWEN_WIDGET_FLAGS_DEFAULT;
 
   prevFocus=GWEN_UI_GetFocusWidget();
-  if (prevFocus) {
-    DBG_NOTICE(0, "Previous focus: %s", GWEN_Widget_GetName(prevFocus));
-  }
 
   /* calculate minimum width */
   if (b1 && b2 && b3) {
@@ -356,11 +353,7 @@ int GWEN_MessageBox(GWEN_WIDGET *parent,
   GWEN_Widget_Close(mw);
   GWEN_UI_Flush();
   GWEN_Widget_free(mw);
-  if (prevFocus) {
-    DBG_NOTICE(0, "Setting focus back to: %s",
-               GWEN_Widget_GetName(prevFocus));
-    GWEN_Widget_SetFocus(prevFocus);
-  }
+  GWEN_Widget_SetFocus(prevFocus);
   return response;
 }
 
